compiler/testData/diagnostics/tests/secondaryConstructors/redeclarationsOfConstructorsIgnored.kt
class <!REDECLARATION!>A<!>
class <!REDECLARATION!>A<!> {
    constructor() {}
}

class B
class Outer {
    class B {
        constructor() {}
    }
}
